ecmascript/parser/tests/test262-error-references/fail/317c81f05510f4ad.js.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/test262-parser/fail/317c81f05510f4ad.js:1:10
  |
1 | for (var {x} = y of z);
  |          ^^^

